--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 shadow-lg p-4 mb-4 bg-white">
     <div class="container mt-5">
-    <div class="bg-secondary mb-0 text-white"><h2 class="text-center mt-3">APP CALCULATOR</h2></div>
+    <div class="bg-secondary mb-0 text-white"><h2 class="text-center mt-3">APP CALCULATOR - Angular</h2></div>
     <div class="card-deck">
     <div class="card p-0">
         <div class="card-body bg-warning border-warning ">
